fix bag on mobile

--- a/src/blocks/card/_card.scss
+++ b/src/blocks/card/_card.scss
@@ -237,37 +237,29 @@
 
   &__remove-button {
     position: absolute;
+    z-index: 1;
+    padding: 0;
     inset: -0.5em -0.5em auto auto;
-    inline-size: clamp(1.5em, 3vw, 1.875em);
-    block-size: clamp(1.5em, 3vw, 1.875em);
+    inline-size: clamp(1.875em, 3.6vw, 2em);
+    block-size: clamp(1.875em, 3.6vw, 2em);
     color: var(--error-color);
-    background-color: #fff;
-    border-radius: 30%;
-    border: 0.2em solid currentColor;
-    transition: 0.35s;
 
-    @media (hover: hover) {
-      &:hover {
-        transform: scale(1.05) translateY(-5%);
-      }
-    }
-
-    &::before,
     &::after {
       content: '';
       position: absolute;
-      top: 50%;
-      left: 50%;
-      inline-size: 80%;
-      block-size: 3px;
-      border-radius: 4px;
-      background: currentColor;
-      transform-origin: center;
-      transform: translate(-50%, -50%) rotate(45deg);
+      z-index: -1;
+      inset: 0.2em;
+      border-radius: 10px;
+      display: block;
+      background-color: #fff;
     }
 
-    &::after {
-      transform: translate(-50%, -50%) rotate(-45deg);
+    @media (hover: hover) {
+      transition: 0.35s;
+      &:hover {
+        background-color: transparent;
+        transform: scale(1.05) translateY(-5%);
+      }
     }
   }
 
